--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/js/all.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.2/handlebars.min.js" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -10,7 +11,12 @@
   </head>
   <body>
     <div class="months-container">
-      <h3 class="month-name"></h3>
+     <div class="select-months">
+       <a href="#"><i class="before fas fa-arrow-left"></i></a>
+        <h3 class="month-name"></h3>
+        <a href="#"><i class="after fas fa-arrow-right"></i></a>       
+     </div>
+
       <ul class="days-list">
 
       </ul>
