--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="months-container">
      <div class="select-months">
        <a href="#"><i class="before fas fa-arrow-left"></i></a>
-        <h3 class="month-name"></h3>
-        <a href="#"><i class="after fas fa-arrow-right"></i></a>       
+        <h3 data-this-month="" class="month-name"></h3>
+        <a href="#"><i class="after fas fa-arrow-right"></i></a>
      </div>
 
       <ul class="days-list">
